Complete - task 3531604: <file>.woof.html within src/main/webapp - https://sourceforge.net/tracker/?func=detail&group_id=156349&atid=7994293531604
Able to run:
 - within unit tests (via WoofOfficeFloorSource.main)
 - through GWT development mode
 - via woof:run  (and have added associated woof:stop)
 - OfficeBuilding